--- a/2.1_jeunesse.Rmd
+++ b/2.1_jeunesse.Rmd
@@ -50,13 +50,7 @@ region_tab %>%
                  ) ) %>%
   relocate(" ",.before=delta) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrllcrllc", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
-  row_spec(which(region_tab$Région=='27'),
-           background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
-  row_spec(nrow(region_tab),
-           bold = T,color = "navy") %>%  
+  cc_kable(aligne = "clrllcrllc")  %>%
   add_header_above(c(" " = 5, "évolution 2013 - 2019" =4, " ")) %>%
   footnote(general = " Insee RP2013, RP2019", 
            general_title = "Source : ",
@@ -81,7 +75,7 @@ leaflet(regwgs) %>%
              highlight = highlightOptions (
                           color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(regwgs@data %>% 
-                                   select(Région=INSEE_REG) %>%
+                                   select(Région=REG) %>%
                                    left_join(.,region_tab %>% 
                                                select(Région,Nom,`15-29 ans`,`Taux<br>15/29`,
                                                       `evo15/29`,`Taux<br>16/25`,`evo16/25`,ind_jeun)
@@ -123,13 +117,7 @@ as.data.frame(dep27_tab) %>%
                  ) ) %>%
   relocate(" ",.before=delta) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="cllrllcrllc", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(dep27_tab)-1,
-           bold = T,color = "steelblue") %>%
-  row_spec(nrow(dep27_tab),
-           bold = T,color = "navy") %>%
+  cc_kable(aligne = "cllrllcrllc") %>%
   add_header_above(c(" " = 6, "évolution 2013 - 2019" =4, " ")) %>%
   footnote(general = " Insee RP2013, RP2019", 
            general_title = "Source : ",
@@ -152,7 +140,7 @@ leaflet(depwgs) %>%
              highlight = highlightOptions (
                           color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(depwgs@data %>% 
-                                   select(Département=INSEE_DEP) %>%
+                                   select(Département=DEP) %>%
                                    left_join(.,dep_tab %>% 
                                                select(Département,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,
                                                       `Taux<br>16/25`,`evo16/25`,ind_jeun)
@@ -188,13 +176,7 @@ epci27_tab %>%
                  ) ) %>%
   relocate(" ",.before=delta) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrllcrllc", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(epci27_tab)-1,
-           bold = T,color = "steelblue") %>%
-  row_spec(nrow(epci27_tab),
-           bold = T,color = "navy") %>%
+  cc_kable(aligne = "clrllcrllc") %>%
   add_header_above(c(" " = 5, "évolution 2013 - 2019" =4, " ")) %>%
   footnote(general = " Insee RP2013, RP2019", 
            general_title = "Source : ",
@@ -219,7 +201,7 @@ leaflet(epcicarto) %>%
              highlight = highlightOptions (
                           color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(epcicarto@data %>% 
-                                   select(EPCI=CODE_EPCI) %>%
+                                   select(EPCI) %>%
                                    left_join(.,epci27_tab %>% 
                                                select(EPCI,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,
                                                       `Taux<br>16/25`,`evo16/25`,ind_jeun)
@@ -252,13 +234,7 @@ bv27_tab %>%
                  ) ) %>%
   relocate(" ",.before=delta) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrllcrllc", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(bv27_tab)-1,
-           bold = T,color = "steelblue") %>%
-  row_spec(nrow(bv27_tab),
-           bold = T,color = "navy") %>%
+  cc_kable(aligne = "clrllcrllc") %>%
   add_header_above(c(" " = 5, "évolution 2013 - 2019" =4, " ")) %>%
   footnote(general = " Insee RP2013, RP2019", 
            general_title = "Source : ",
