--- a/5.2_licences.Rmd
+++ b/5.2_licences.Rmd
@@ -54,8 +54,7 @@ licreg <- as.data.frame(t(lic_reg[117,3:15]))
 licreg$region <- t(as.data.frame(levels(lic_reg)[4:16]))
 licreg <- licreg %>% 
             rownames_to_column(var="REG") %>%
-            left_join(.,regwgs@data %>% 
-                        dplyr::select(REG=INSEE_REG,pop)
+            left_join(.,pop_basecom(REG)
                       ,by="REG" )    %>%
             adorn_totals("row",name = "FR") %>%
             mutate(txlic=round(100*V1/pop,1))
@@ -99,10 +98,10 @@ hchart(licreg %>%
 sportreg <- as.data.frame(t(lic_reg)) %>%
             select(licences_tot=V117) %>%
             mutate(licences_tot=as.numeric(licences_tot)) %>%
-            rownames_to_column("INSEE_REG") %>% 
+            rownames_to_column("REG") %>% 
             slice (3:15)
 
-cartosportreg <- sp::merge(regwgs,sportreg,by="INSEE_REG")
+cartosportreg <- sp::merge(regwgs,sportreg,by="REG")
 
 leaflet(cartosportreg) %>% 
   addPolygons(weight=2,opacity = 0.6,color = "#2F4F4F",
@@ -155,13 +154,9 @@ lic_reg %>%
          `Taux de licences (%)`="...6") %>% 
   select(-8) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="rcrrrrrlrr", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
+  cc_kable("rcrrrrrlrr") %>%
   column_spec(6, 
               bold=T) %>%
-  row_spec(3,
-           background = "#E0FFFF75",  bold = T , color = "steelblue") %>%
   add_header_above(c( " "=2,"Fédérations"=3,"Licences"=4) ) %>%
   footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
            general_title = "Source : ",
@@ -225,8 +220,8 @@ Column {.tabset .tabset-fade .tabset-pills}
 Une baisse des licences unisport olympique observée pour la première fois en 2020.
 
 ```{r}
-lic_reg[39,1] <- "total"
-fedsexe[39,1] <- "total"
+lic_reg[39,1] <- "Total"
+fedsexe[39,1] <- "Total"
 
 lic_reg %>%  
   dplyr::select(1:2,"11":"94",`France métro`="...22") %>% 
@@ -256,9 +251,7 @@ lic_reg %>%
              by=c("Code fédération"="fed") ) %>% 
   select(-17) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="clrrrrrrrrrrrrrrl", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
+  cc_kable("clrrrrrrrrrrrrrrl") %>%
   add_header_above(c(" "=2,"Code région"=13," "=3) )%>%
   column_spec(5, 
               bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
@@ -297,8 +290,8 @@ hchart(lic_reg  %>%
 ### Détail unisport non olympique
 
 ```{r}
-lic_reg[91,1] <- "total"
-fedsexe[91,1] <- "total"
+lic_reg[91,1] <- "Total"
+fedsexe[91,1] <- "Total"
 
 lic_reg %>%  
   dplyr::select(1:2,"11":"94",`France métro`="...22") %>% 
@@ -328,8 +321,7 @@ lic_reg %>%
              by=c("Code fédération"="fed") )%>% 
   select(-17) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="clrrrrrrrrrrrrrrl", escape = F) %>% 
+  cc_kable("clrrrrrrrrrrrrrrl") %>% 
   kable_styling("hover", full_width = F) %>%
   add_header_above(c(" "=2,"Code région"=13," "=3) )%>%
   column_spec(5, 
@@ -367,8 +359,8 @@ hchart(lic_reg  %>%
 ### Détail multisport
 
 ```{r}
-lic_reg[116,1] <- "total"
-fedsexe[116,1] <- "total"
+lic_reg[116,1] <- "Total"
+fedsexe[116,1] <- "Total"
 
 lic_reg %>%  
   dplyr::select(1:2,"11":"94",`France métro`="...22") %>% 
@@ -398,9 +390,7 @@ lic_reg %>%
              by=c("Code fédération"="fed") ) %>% 
   select(-17) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="clrrrrrrrrrrrrrrl", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
+  cc_kable("clrrrrrrrrrrrrrrl") %>%
   add_header_above(c(" "=2,"Code région"=13," "=3) )%>%
   column_spec(5, 
               bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
@@ -495,7 +485,7 @@ licdep <- licdep %>%
             mutate (dep=ifelse(nchar(dep)==1,paste0('0',dep),dep), 
                     V1=as.numeric(V1)) %>%
             left_join(.,depwgs@data %>% 
-                        dplyr::select(dep=INSEE_DEP,pop),
+                        dplyr::select(dep=DEP,pop),
                       by="dep" ) %>%
             adorn_totals("row",name = "FR") %>%
             mutate(txlic=round(100*V1/pop,1)) 
@@ -556,13 +546,13 @@ hchart(licdep %>%
 sportdep <- as.data.frame(t(lic_dep)) %>%
                 select(licences_tot=V118) %>%
                 mutate(licences_tot=as.numeric(licences_tot)) %>%
-                rownames_to_column("INSEE_DEP") 
+                rownames_to_column("DEP") 
 
-sportdep$INSEE_DEP <- ifelse(nchar(sportdep$INSEE_DEP)==1,
-                             paste0("0",sportdep$INSEE_DEP),
-                             sportdep$INSEE_DEP ) 
+sportdep$DEP <- ifelse(nchar(sportdep$DEP)==1,
+                             paste0("0",sportdep$DEP),
+                             sportdep$DEP ) 
 
-cartosportdep <- sp::merge(depwgs,sportdep,by="INSEE_DEP")
+cartosportdep <- sp::merge(depwgs,sportdep,by="DEP")
 
 leaflet(cartosportdep) %>% 
   addPolygons(color = "#2F4F4F",weight=2,opacity = 0.6, 
@@ -576,7 +566,7 @@ leaflet(cartosportdep) %>%
              highlight = highlightOptions (
                           color = "#00FFFF", weight = 5,  fillOpacity =  0.1 ),
              popup = popupTable(cartosportdep@data %>% 
-                                  select(Région=LIBGEO,pop,licences_tot) %>%
+                                  select(Département=LIBGEO,pop,licences_tot) %>%
                                   mutate(`Taux de licences`=100*licences_tot/pop),
                                 feature.id=F,row.numbers = F)) %>%
 addLegend( pal = pal2 , values = 100*(cartosportdep$licences_tot/cartosportdep$pop),
@@ -628,11 +618,7 @@ lic_dep %>%
          `Taux de licences (%)`="...6") %>% 
   select(-10) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="crrrrrrlr", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
-  row_spec(9, 
-           bold=T, background = "#E0FFFF75",  color = "steelblue") %>%
+  cc_kable("crrrrrrlr") %>%
   column_spec(6, 
               bold=T) %>%
   add_header_above(c( " "=2,"Fédérations"=3,"Licences"=4) ) %>%
@@ -672,7 +658,7 @@ hchart ( lic_dep %>%
 
 Plus de la moitié des licences dans les fédérations unisport olympiques.
 
-```{r, plotly=T}
+```{r}
 hchart ( lic_dep %>%  
            dplyr::select(2,depbfc) %>%
            slice(40,92,117,118) %>%
@@ -727,13 +713,10 @@ lic_dep %>%
              by=c("Code fédération"="fed")) %>%
   select(-12) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrrrrrrrrlrl", escape = F) %>% 
+  cc_kable("lcrrrrrrrrrlrl") %>% 
   kable_styling("hover", full_width = F) %>%
   column_spec(11, 
               bold=T) %>%
-#  row_spec(which(region$REG=='27'),background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
-#  row_spec(nrow(region_tab),bold = T,color = "navy") %>%
   footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
            general_title = "Source : ",
            number = c("F= Fédération \n","FF = Fédération Française"), 
@@ -771,9 +754,7 @@ lic_dep %>%
              by=c("Code fédération"="fed") ) %>% 
   select(-12) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrrrrrrrrlrl", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
+  cc_kable("lcrrrrrrrrrlrl") %>%
   column_spec(11, 
               bold=T) %>%
   footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
@@ -813,9 +794,7 @@ lic_dep %>%
              by=c("Code fédération"="fed") ) %>% 
   select(-12) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrrrrrrrrrlrl", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
+  cc_kable("lcrrrrrrrrrlrl") %>%
   column_spec(11, 
               bold=T) %>%
   footnote(general = " MEDES recensement des licences sportives et des clubs 2021", 
@@ -859,9 +838,7 @@ lic27epci %>%
   rename(totales=txlic,femmes=txlicf,hommes=txlich,jeunes=txlicjeunes,
          féminines=txfemmes,`jeunes<20`=txjeunes) %>%
   
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrllllrrrrr", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
+  cc_kable("lcrllllrrrrr") %>%
   add_header_above(c( " "=3,"Taux de licences parmi"=4,"Part de licences "=2) ) %>%
   footnote(general = " MEDES recensement des licences sportives et des clubs 2019", 
            general_title = "Source : ",
@@ -875,10 +852,10 @@ lic27epci %>%
 ```{r}
  
 lic_epci <- sp::merge(epciwgs,lic27epci %>%
-                        select(CODE_EPCI=EPCI, LIBGEO, licences, 
+                        select(EPCI, LIBGEO, licences, 
                                txlic, txfemmes, txlicf,txlich,txjeunes, txlicjeunes) %>%
                         mutate_at(3:8,as.numeric) ,
-                      by="CODE_EPCI")
+                      by="EPCI")
 
 leaflet(lic_epci) %>%  
   addPolygons(color = "#2F4F4F", weight = 2,opacity = 0.6,
@@ -943,9 +920,7 @@ lic27bv %>%
   rename(totales=txlic,femmes=txlicf,hommes=txlich,jeunes=txlicjeunes,
          féminines=txfemmes,`jeunes<20`=txjeunes) %>%
 
-  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="lcrllllrrrrr", escape = F) %>% 
-  kable_styling("hover", full_width = F) %>%
+  cc_kable("lcrllllrrrrr") %>%
   add_header_above(c( " "=3,"Taux de licences parmi"=4,"Part de licences "=2) ) %>%
   footnote(general = " MEDES recensement des licences sportives et des clubs 2019", 
            general_title = "Source : ",
